change in composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Julio Cesar Leyva Rodriguez",
-            "email": "juliocesarleyvarodriguez@hotmail.com"
+            "name": "julio101920",
+            "email": "julio101290@hotmail.com"
         }
     ],
     "require": {
